# arc_level_generator

./: Cargo.toml  README.md
src/: lib.rs
src/generate/: calculate_feature_shift.rs  can_spawn_feature.rs  drain_upcoming_features.rs  mod.rs  spawn_feature.rs  trim_active_features.rs  trim_obstacles.rs  types.rs
src/generate/types/: calculate_prefabs_spawn_bounds.rs  collideable_entity.rs  feature.rs  visible_world.rs
src/generator/: calculate_feature_shift.rs  calculate_prefabs_spawn_bounds.rs  can_spawn_feature.rs  drain_upcoming_features.rs  generate.rs  mod.rs  spawn_feature.rs  trim_active_features.rs  trim_obstacles.rs
src/generator/bi_arc_motion/: bi_arc_curve_motion.rs  mod.rs
src/generator/tilt_motion/: bi_arc_curve_motion.rs  constant_velocity_z_tilt_motion.rs  mod.rs
src/generator/types/: aabb_serialization.rs  calculate_prefabs_spawn_bounds.rs  collideable_entity.rs  feature.rs  mod.rs  movement.rs  prefab.rs  visible_world.rs
src/interop/: bind_deallocate_vec.rs  bind_generate.rs  deallocate_rust_array.rs  generate_entities.rs  mod.rs
src/interop/types/: mod.rs
src/min_loop/: mod.rs
src/types/: mod.rs
tests/: test_bind_generate.rs  test_generate.rs  test_interop.rs
