[package]
name = "arc_level_generator"
version = "0.1.0"
authors = ["Maciej Srokowski <srokowski.maciej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arc_level_generator"
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
ncollide3d = { git = "https://github.com/Sroka/ncollide" }
nalgebra = "0.23"
rand = "0.7"
itertools = "0.9"
float-cmp = "0.8.0"