[package]
name = "arc_level_generator"
version = "0.1.0"
authors = ["Maciej Srokowski <srokowski.maciej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arc_level_generator"
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
ncollide3d = { git = "https://github.com/Sroka/ncollide" }
nalgebra = { version = "0.23", features = ["serde-serialize"] }
rand = "0.7"
itertools = "0.9"
approx = "0.4.0"
rayon = "1.5"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"